--- a/packages/flying-shigechi/package.json
+++ b/packages/flying-shigechi/package.json
@@ -10,7 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.10.3",
     "nuxt": "^3.9.3",
+    "nuxt-icon": "^0.6.8",
+    "sass": "^1.70.0",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
   }
