--- a/packages/flying-shigechi/package.json
+++ b/packages/flying-shigechi/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/tailwindcss": "^6.10.3",
     "nuxt": "^3.9.3",
     "nuxt-icon": "^0.6.8",
