--- a/packages/flying-shigechi/package.json
+++ b/packages/flying-shigechi/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/tailwindcss": "^6.10.3",
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.9.3",
     "nuxt-icon": "^0.6.8",
     "sass": "^1.70.0",
